--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cabin.png" class="img-responsive" alt="" >
+                        <img src="img/portfolio/photograpgy.png" class="img-responsive" alt="" >
                     </a>
                 </div>
             
