--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <div class="modal-body">
                             <h2>Desamito-Nonales</h2>
                             <hr class="star-primary">
-                            <img src="https://github.com/meolanoanles/meolanonales.github.io/blob/master/img/download.jpg?raw=true" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/photography.png" class="img-responsive img-centered" alt="">
                            
                             <ul class="list-inline item-details">
                                 <li>Client:
