--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                            
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href=" https://meolanoanles.github.io/website.github.io/">Photography</a>
+                                    <strong><a href=" https://gerilyndesamito.github.io/">Photography</a>
                                     </strong>
                                 </li>
                                 <li>Date:
