--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="image/photo.png">
+                    <img class="img-responsive" src="img/photo.png">
                     <div class="intro-text">
                         <span class="name">GERILYN DESAMITO</span>
                         <hr class="star-light">
