--- a/index.html
+++ b/index.html
@@ -209,21 +209,21 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Resume</h2>
+                            <h2>BLOG</h2>
                             <hr class="star-primary">
                             <img src="img/res.png" class="img-responsive img-centered" alt="">
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="https://meolanonales.github.io/resume.github.io/">Start Bootstrap</a>
+                                    <strong><a href="https://github.com/gerilyndesamito/blog.github.io/">Start Bootstrap</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="https://meolanonales.github.io/resume.github.io/">April 2014</a>
+                                    <strong><a href="">April 2014</a>
                                     </strong>
                                 </li>
                                 <li>Service:
-                                    <strong><a href="https://meolanonales.github.io/resume.github.io/">Web Development</a>
+                                    <strong><a href="">Web Development</a>
                                     </strong>
                                 </li>
                             </ul>
