--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cake.png" class="img-responsive" alt="">
+                        <img src="img/positivity.png" class="img-responsive" alt="">
                     </a>
                 </div>
             </div>
